--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -89,6 +89,12 @@
 			<dict>
 				<key>#Comment-IRQ Fix</key>
 				<string>The following fixes may be needed for onboard audio/USB/etc</string>
+				<key>AddHDMI</key>
+				<false/>
+				<key>AddPNLF</key>
+				<false/>
+				<key>FixDisplay</key>
+				<false/>
 				<key>FixLAN</key>
 				<false/>
 			</dict>
@@ -202,7 +208,7 @@
 			</dict>
 		</array>
 		<key>FixHeaders</key>
-		<true/>
+		<false/>
 		<key>HaltEnabler</key>
 		<false/>
 		<key>SSDT</key>
@@ -215,6 +221,8 @@
 				<false/>
 				<key>PStates</key>
 				<false/>
+				<key>PluginType</key>
+				<true/>
 			</dict>
 			<key>PluginType</key>
 			<integer>1</integer>
@@ -223,7 +231,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>dart=0 kext-dev-mode=1 -disablegfxfirmware</string>
+		<string>-xcpm nvda_drv=1 kext-dev-mode=1</string>
 		<key>DefaultVolume</key>
 		<string>mac</string>
 		<key>Legacy</key>
@@ -231,7 +239,7 @@
 		<key>Log</key>
 		<false/>
 		<key>NeverHibernate</key>
-		<true/>
+		<false/>
 		<key>Secure</key>
 		<false/>
 		<key>Timeout</key>
@@ -341,8 +349,6 @@
 			<key>Tool</key>
 			<false/>
 		</dict>
-		<key>ScreenResolution</key>
-		<string>1920x1080</string>
 		<key>Theme</key>
 		<string>Xiaomi</string>
 	</dict>
@@ -362,8 +368,8 @@
 			<key>NVidia</key>
 			<false/>
 		</dict>
-		<key>ig-platform-id</key>
-		<string>0x12345678</string>
+		<key>PatchVBios</key>
+		<false/>
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
@@ -378,9 +384,9 @@
 			<string>\System\Library\Extensions\IONetworkingFamily.kext</string>
 		</array>
 		<key>KernelLapic</key>
-		<true/>
+		<false/>
 		<key>KernelPm</key>
-		<true/>
+		<false/>
 		<key>KernelToPatch</key>
 		<array>
 			<dict>
